Add automatic_post_offices and filters
