# app/controllers/api/v1/areas_controller.rb
@@ -3,6 +3,7 @@ class Api::V1::AreasController < Api::V1::BaseController
   private
 
   def collection
-    @collection ||= Area.where(district_id: params[:district_id])
+    @collection ||= Area.with_attached_emblem
+                        .where(district_id: params[:district_id])
   end
 end
