# app/models/district.rb
@@ -1,3 +1,4 @@
 class District < ApplicationRecord
   has_many :areas
+  has_many :automatic_post_offices, through: :areas
 end
