# app/models/placement_object_type.rb
@@ -1,0 +1,3 @@
+class PlacementObjectType < ApplicationRecord
+  has_many :automatic_post_offices
+end
