# app/serializers/district_serializer.rb
@@ -1,5 +1,5 @@
 class DistrictSerializer < ActiveModelSerializer
-  attributes :name, :short_name, :square, :population, :'2gis_id'
+  attributes :name, :short_name, :square, :population, :'2gis_id', :automatic_post_office_stats
 
   attribute :polygon, if: :method_show?
   attribute :polygon_type, if: :method_show?
@@ -11,5 +11,12 @@ class DistrictSerializer < ActiveModelSerializer
 
   def center_coord
     JSON.parse(object.center_coord)
+  end
+
+  def automatic_post_office_stats
+    {
+      placed: object.automatic_post_offices.placed.size,
+      not_placed: object.automatic_post_offices.not_placed.size
+    }
   end
 end
